# llm-compliance

./: .gitignore  README.md  pyproject.toml  requirements-mlx.txt  requirements-x86.txt  requirements.txt
configs/: baseline.yaml  benchmark_100.yaml  full.yaml  full_500.yaml  full_500_restart.yaml  full_800.yaml
demo/: README.md  gradio_app.py  requirements.txt  samples.json  smoke_pipeline.py
doc/: README.md  VERIFICATION.md  opening-report-formal.md  opening-report-reference.md  opening-report-vlm.md  phase2_workflow_ops.md  reference.md  tasks.md  threat_model.md
scripts/: build_label_eval_sets.py  build_phase1.py  check_phase2_readiness.py  compare_generation_pipelines.py  compare_phase3_5_pipeline.py  download_data.py  download_models.py  eval.py  eval_crossmodal.py  eval_rules.py  infer.py  infer_pipeline_light.py  launch_phase2_2_full_500.ps1  launch_phase2_2_full_800.ps1  launch_train_full.sh  measure_offline.py  package_offline.py  plan_phase2_workflow.py  quant_smoke.py  render_phase2_progress_check.py  run_phase2_workflow.ps1  smoke_data.py  smoke_env.py  smoke_model.py  smoke_offline.py  train.py
skills/git-commit/: SKILL.md
skills/phase2-progress-check/: SKILL.md
src/mpid/: __init__.py  device.py  early_exit.py
src/mpid/adapters/: __init__.py  vlm.py
src/mpid/backbones/: __init__.py  registry.py
src/mpid/crossmodal/: __init__.py  heuristic.py
src/mpid/data/: __init__.py  dataset.py  prompt.py  public_loaders.py  split.py  synthetic_image_injection.py
src/mpid/heads/: __init__.py  classification.py
src/mpid/infer/: __init__.py  pipeline.py
src/mpid/rules/: __init__.py  engine.py
src/mpid/train/: __init__.py  trainer.py
tests/: test_crossmodal_heuristic.py  test_device.py  test_early_exit.py  test_pipeline_lightweight.py  test_rules_engine.py
