[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mpid"
version = "0.1.0"
description = "Multimodal Prompt Injection Detection (MPID) — defense against prompt injection in Vision-Language Models"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "MPID Authors" },
]
keywords = ["llm", "vlm", "prompt-injection", "security", "jailbreak", "mps", "offline"]

dependencies = [
    "torch>=2.4.1,<2.5",
    "torchvision>=0.19.1,<0.20",
    "transformers>=4.45,<4.50",
    "tokenizers>=0.20,<0.22",
    "safetensors>=0.4",
    "peft>=0.11,<0.15",
    "accelerate>=0.34,<1.0",
    "bitsandbytes>=0.42,<0.46",
    "datasets>=2.20,<3.0",
    "scikit-learn>=1.4,<1.7",
    "numpy>=1.24,<2.1",
    "pandas>=2.0,<3.0",
    "pillow>=10.0,<12.0",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "huggingface_hub>=0.25",
    "sentencepiece>=0.2",
    "protobuf>=4.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=24.0",
    "ruff>=0.5",
]

[project.scripts]
# Console-script entry points are intentionally NOT declared yet.
# Phase 2 (T2.5 / T2.9 / T2.1) will create ``mpid.cli.{train,eval,infer}``
# and register them here. Declaring them now would break ``pip install -e .``
# because the modules don't exist.

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["mpid*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
